<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/userShouldDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

        <TextView
            android:id="@+id/userShouldDo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tune_the_sound_detection"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="3dp"
            app:layout_constraintBottom_toTopOf="@+id/userShouldDoHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/userShouldDoHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_your_phone_on_the_table_and_make_noises_in_the_room_to_find_the_right_level_to_detect"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            app:layout_constraintBottom_toTopOf="@+id/simplewaveform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userShouldDo" />

        <org.havenapp.main.ui.SimpleWaveformExtended
            android:id="@+id/simplewaveform"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/trigger_level_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userShouldDoHint"
            app:layout_constraintVertical_weight="5" />

        <TextView
            android:id="@+id/trigger_level_hint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/configure_trigger_level"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/number_trigger_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simplewaveform"
            app:layout_constraintVertical_weight="1" />
        <com.google.android.material.slider.Slider
            android:id="@+id/number_trigger_level"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:valueFrom="0"
            android:stepSize="1"
            app:labelBehavior="gone" />

        <TextView
            android:id="@+id/text_display_level"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/current_noise_base"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_trigger_level"
            app:layout_constraintVertical_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>
